<resources>
    <string name="app_name">Final_Project</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">idKkpoMnyIq9SiFyT86nGpzfdg6Os0T2jcbQsuaL</string>
    <string name="back4app_client_key">t3UwCgRQRQlxi8oPT9a2DknLbIB5nSxHCkrw5Lyc</string>

    <string name="ticketmaster_key">6zyeU8AOypGsbIoAw93PCIhhz81vWMVo</string>
    <string name="ticketmaster_secret">HVpcFtc4HiegTjmi</string>

    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_location_rationale">Location permission is needed to search for nearby events.</string>
    <string name="permission_location_denied">Location permission was denied. Please consider granting it in order to search for nearby events!</string>
    <string name="permission_location_never_ask_again">Location permission was denied with never ask again.</string>

    <string name="navigation_drawer_open"> Open Navigation Drawer </string>
    <string name="navigation_drawer_close"> Close Navigation Drawer</string>
    <string name="login_signup_text">Don\'t have an account?</string>
    <string name="own_account_text">Have an account already?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="eventful">Eventful</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_event">Create Event</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string name="WIP">Work In Progress</string>
    <string name="event_image">Event Image</string>

</resources>