<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/librebodoni_bolditalic"
        android:text="@string/eventful"
        android:textColor="@color/white"
        android:textSize="75sp"
        app:layout_constraintBottom_toTopOf="@+id/Signup_Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Signup_Username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:autofillHints="User Name"
        android:background="@drawable/loginbackground"
        android:ems="50"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Signup_Password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/loginbackground"
        android:ems="50"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Username" />

    <Button
        android:id="@+id/Signup_SignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/coBlue"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0.05"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Password" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_SignUp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/own_account_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Signup_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="22dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/roboto_bold_italic"
            android:minWidth="0dp"
            android:paddingHorizontal="5dp"
            android:text="@string/login"
            android:textColor="@color/coGreen"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>